--- a/privacy.html
+++ b/privacy.html
@@ -3,8 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Calorify</title>
-    <meta name="description" content="Calorify Privacy Policy - Learn how we protect and handle your personal data.">
+    <title>Privacy Policy - Calorify | Data Protection & User Privacy</title>
+    <meta name="description" content="Calorify Privacy Policy. Learn how we protect your personal data, nutrition tracking information, and health data. GDPR compliant. Your privacy is our priority.">
+    <link rel="canonical" href="https://calorify.app/privacy.html">
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Privacy Policy - Calorify">
+    <meta property="og:description" content="Learn how Calorify protects your personal data and nutrition tracking information. GDPR compliant privacy practices.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://calorify.app/privacy.html">
+    <meta property="og:site_name" content="Calorify">
+
+    <!-- Additional Meta Tags -->
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Calorify">
+
+    <!-- Schema.org Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Privacy Policy",
+      "description": "Calorify Privacy Policy - Data protection and user privacy information",
+      "url": "https://calorify.app/privacy.html",
+      "inLanguage": "en-US",
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "Calorify",
+        "url": "https://calorify.app"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Calorify",
+        "url": "https://calorify.app"
+      },
+      "dateModified": "2025-01-26",
+      "breadcrumb": {
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://calorify.app"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Privacy Policy",
+            "item": "https://calorify.app/privacy.html"
+          }
+        ]
+      }
+    }
+    </script>
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
