--- a/terms.html
+++ b/terms.html
@@ -3,8 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service - Calorify</title>
-    <meta name="description" content="Calorify Terms of Service - Understanding your rights and responsibilities when using our app.">
+    <title>Terms of Service - Calorify | User Agreement & App Terms</title>
+    <meta name="description" content="Calorify Terms of Service. Read our user agreement, app usage terms, subscription details, and legal information. Updated January 2025.">
+    <link rel="canonical" href="https://calorify.app/terms.html">
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Terms of Service - Calorify">
+    <meta property="og:description" content="Calorify Terms of Service - User agreement and app usage terms for our nutrition tracking platform.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://calorify.app/terms.html">
+    <meta property="og:site_name" content="Calorify">
+
+    <!-- Additional Meta Tags -->
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Calorify">
+
+    <!-- Schema.org Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Terms of Service",
+      "description": "Calorify Terms of Service - User agreement and app terms",
+      "url": "https://calorify.app/terms.html",
+      "inLanguage": "en-US",
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "Calorify",
+        "url": "https://calorify.app"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Calorify",
+        "url": "https://calorify.app"
+      },
+      "dateModified": "2025-01-26",
+      "breadcrumb": {
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://calorify.app"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Terms of Service",
+            "item": "https://calorify.app/terms.html"
+          }
+        ]
+      }
+    }
+    </script>
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -151,8 +204,8 @@
 
                 <h3>Subscription Options</h3>
                 <ul>
-                    <li><strong>Monthly</strong>: $4.99/month</li>
-                    <li><strong>Annual</strong>: $49.99/year (includes 1-week free trial)</li>
+                    <li><strong>Monthly</strong>: $4.99/month (3-day free trial)</li>
+                    <li><strong>Annual</strong>: $49.99/year (7-day free trial - Save 17%)</li>
                 </ul>
 
                 <h3>Billing</h3>
@@ -172,7 +225,8 @@
 
                 <h3>Free Trial</h3>
                 <ul>
-                    <li>1-week free trial for annual subscription</li>
+                    <li>3-day free trial for monthly subscription</li>
+                    <li>7-day free trial for annual subscription</li>
                     <li>Automatically converts to paid subscription unless canceled</li>
                     <li>Cancel before trial ends to avoid charges</li>
                 </ul>
