Update image references in index.html to new naming convention and remove outdated images. Change app store links to the correct regional URL for better accessibility.

--- a/index.html
+++ b/index.html
@@ -87,15 +87,14 @@
         "url": "https://calorify.app"
       },
       "screenshot": [
-        "https://calorify.app/img/1.png",
-        "https://calorify.app/img/2.png",
-        "https://calorify.app/img/3.png",
-        "https://calorify.app/img/4.png",
-        "https://calorify.app/img/5.png",
-        "https://calorify.app/img/6.png",
-        "https://calorify.app/img/7.png",
-        "https://calorify.app/img/8.png",
-        "https://calorify.app/img/9.png"
+        "https://calorify.app/img/01.png",
+        "https://calorify.app/img/02.png",
+        "https://calorify.app/img/03.png",
+        "https://calorify.app/img/04.png",
+        "https://calorify.app/img/05.png",
+        "https://calorify.app/img/06.png",
+        "https://calorify.app/img/07.png",
+        "https://calorify.app/img/08.png"
       ],
       "featureList": [
         "AI-powered food recognition",
@@ -107,9 +106,9 @@
         "Food database",
         "Meal planning"
       ],
-      "url": "https://apps.apple.com/us/app/calorify-ai-calorie-counter/id1234567890",
-      "downloadUrl": "https://apps.apple.com/us/app/calorify-ai-calorie-counter/id1234567890",
-      "installUrl": "https://apps.apple.com/us/app/calorify-ai-calorie-counter/id1234567890"
+      "url": "https://apps.apple.com/tr/app/calorify-ai-calorie-counter/id6749366793",
+      "downloadUrl": "https://apps.apple.com/tr/app/calorify-ai-calorie-counter/id6749366793",
+      "installUrl": "https://apps.apple.com/tr/app/calorify-ai-calorie-counter/id6749366793"
     }
     </script>
 
@@ -168,42 +167,42 @@
           "name": "Download and Install Calorify",
           "text": "Download Calorify from the App Store. It's free with optional premium features.",
           "url": "https://calorify.app#download",
-          "image": "https://calorify.app/img/1.png"
+          "image": "https://calorify.app/img/01.png"
         },
         {
           "@type": "HowToStep",
           "name": "Set Up Your Profile",
           "text": "Enter your age, weight, height, and fitness goals. Calorify will calculate your daily calorie budget.",
           "url": "https://calorify.app#setup",
-          "image": "https://calorify.app/img/2.png"
+          "image": "https://calorify.app/img/02.png"
         },
         {
           "@type": "HowToStep",
           "name": "Track Food with AI Camera",
           "text": "Take a photo of any meal. The AI instantly recognizes the food and calculates calories and nutrients.",
           "url": "https://calorify.app#ai-tracking",
-          "image": "https://calorify.app/img/3.png"
+          "image": "https://calorify.app/img/03.png"
         },
         {
           "@type": "HowToStep",
           "name": "Use Voice Commands",
           "text": "Tap the microphone and say what you ate. For example: 'I had grilled chicken with rice for lunch.'",
           "url": "https://calorify.app#voice",
-          "image": "https://calorify.app/img/4.png"
+          "image": "https://calorify.app/img/04.png"
         },
         {
           "@type": "HowToStep",
           "name": "Track Water Intake",
           "text": "Use quick-add buttons to log your water consumption throughout the day.",
           "url": "https://calorify.app#water",
-          "image": "https://calorify.app/img/5.png"
+          "image": "https://calorify.app/img/05.png"
         },
         {
           "@type": "HowToStep",
           "name": "Review Your Progress",
           "text": "Check daily, weekly, and monthly reports to see your nutrition trends and progress toward goals.",
           "url": "https://calorify.app#progress",
-          "image": "https://calorify.app/img/6.png"
+          "image": "https://calorify.app/img/06.png"
         }
       ]
     }
@@ -313,7 +312,7 @@
             <h1 class="hero-title">Smart Nutrition Tracking</h1>
             <p class="hero-subtitle">Your comprehensive iOS companion for tracking calories, macros, and achieving your health goals with AI-powered food recognition.</p>
             <div class="hero-buttons">
-                <a href="https://apps.apple.com/us/app/calorify-ai-calorie-counter/id1234567890" class="btn-primary" target="_blank" rel="noopener noreferrer">
+                <a href="https://apps.apple.com/tr/app/calorify-ai-calorie-counter/id6749366793" class="btn-primary" target="_blank" rel="noopener noreferrer">
                     <svg class="apple-icon" viewBox="0 0 24 24">
                         <path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/>
                     </svg>
@@ -325,7 +324,7 @@
         <div class="hero-image">
             <div class="phone-mockup">
                 <div class="phone-screen">
-                    <img src="img/1.png" alt="Calorify App Screenshot" class="app-screenshot">
+                    <img src="img/01.png" alt="Calorify App Screenshot" class="app-screenshot">
                 </div>
             </div>
         </div>
@@ -344,31 +343,28 @@
                     </button>
                     <div class="carousel-track">
                         <div class="carousel-slide active">
-                            <img src="img/1.png" alt="Home Dashboard" loading="lazy">
+                            <img src="img/01.png" alt="Home Dashboard" loading="lazy">
                         </div>
                         <div class="carousel-slide">
-                            <img src="img/2.png" alt="Food Tracking" loading="lazy">
+                            <img src="img/02.png" alt="Food Tracking" loading="lazy">
                         </div>
                         <div class="carousel-slide">
-                            <img src="img/3.png" alt="Nutrition Analysis" loading="lazy">
+                            <img src="img/03.png" alt="Nutrition Analysis" loading="lazy">
                         </div>
                         <div class="carousel-slide">
-                            <img src="img/4.png" alt="Progress Charts" loading="lazy">
+                            <img src="img/04.png" alt="Progress Charts" loading="lazy">
                         </div>
                         <div class="carousel-slide">
-                            <img src="img/5.png" alt="Meal Planning" loading="lazy">
+                            <img src="img/05.png" alt="Meal Planning" loading="lazy">
                         </div>
                         <div class="carousel-slide">
-                            <img src="img/6.png" alt="Water Tracking" loading="lazy">
+                            <img src="img/06.png" alt="Water Tracking" loading="lazy">
                         </div>
                         <div class="carousel-slide">
-                            <img src="img/7.png" alt="Achievements" loading="lazy">
+                            <img src="img/07.png" alt="Achievements" loading="lazy">
                         </div>
                         <div class="carousel-slide">
-                            <img src="img/8.png" alt="Settings" loading="lazy">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="img/9.png" alt="AI Insights & Reports" loading="lazy">
+                            <img src="img/08.png" alt="Settings" loading="lazy">
                         </div>
                     </div>
                     <button class="carousel-btn carousel-next" aria-label="Next screenshot">
@@ -386,21 +382,20 @@
                     <button class="carousel-dot" data-slide="5" aria-label="Go to slide 6"></button>
                     <button class="carousel-dot" data-slide="6" aria-label="Go to slide 7"></button>
                     <button class="carousel-dot" data-slide="7" aria-label="Go to slide 8"></button>
-                    <button class="carousel-dot" data-slide="8" aria-label="Go to slide 9"></button>
                 </div>
             </div>
             <div class="showcase-grid">
                 <div class="showcase-item">
-                    <img src="img/1.png" alt="Dashboard" loading="lazy">
+                    <img src="img/01.png" alt="Dashboard" loading="lazy">
                 </div>
                 <div class="showcase-item">
-                    <img src="img/2.png" alt="Food Tracking" loading="lazy">
+                    <img src="img/02.png" alt="Food Tracking" loading="lazy">
                 </div>
                 <div class="showcase-item">
-                    <img src="img/3.png" alt="Analytics" loading="lazy">
+                    <img src="img/03.png" alt="Analytics" loading="lazy">
                 </div>
                 <div class="showcase-item">
-                    <img src="img/4.png" alt="Progress" loading="lazy">
+                    <img src="img/04.png" alt="Progress" loading="lazy">
                 </div>
             </div>
         </div>
@@ -502,7 +497,7 @@
             <h2 class="cta-title">Start Your Health Journey Today</h2>
             <p class="cta-subtitle">Join thousands of users achieving their nutrition goals with Calorify</p>
             <div class="cta-buttons">
-                <a href="https://apps.apple.com" class="btn-primary btn-large">
+                <a href="https://apps.apple.com/tr/app/calorify-ai-calorie-counter/id6749366793" class="btn-primary btn-large">
                     <svg class="apple-icon" viewBox="0 0 24 24">
                         <path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/>
                     </svg>
